# ECSPygameDemo

./: .env.example  .gitignore  LICENSE  README.md  app.py  build.py  build.spec  config.py  main.py  pyproject.toml  requirements.txt  stats.py
app/: __init__.py  application.py
config/: __init__.py  base.py  game_config.py  logging.py  settings.py  stats.py  ui.py
docs/: ADVANCED_ARCHITECTURE_GUIDE.md  TESTS.md  UV.md
engine/: __init__.py  asset_loader.py  base_scene.py  components.py  ecs.py  event_bus.py  scene_manager.py  service_locator.py  systems.py  ui_builder.py
engine/components/: __init__.py  alpha.py  button.py  headers.py  image.py  input.py  label.py  progress_bar.py  sound.py
engine/systems/: __init__.py  input.py  input_system.py  render.py  render_system.py  sound.py  sound_system.py
game/: __init__.py  logic.py  scenes.py  ui_builder.py
game/scenes/: __init__.py  boot.py  dialog.py  game.py  menu.py  results_modal.py  win.py
logger/: __init__.py  colored_formatter.py
stats/: __init__.py  manager.py  models.py  storage.py
tests/: conftest.py
tests/test_components/: test_components.py
tests/test_config/: test_config.py
tests/test_engine/: test_ui_builder.py
tests/test_game/: test_game_logic.py
tests/test_integration/: test_scene_transitions.py
tests/test_systems/: test_systems.py
tests/test_utils/: test_graphics.py  test_helpers.py  test_resources.py  test_resources_extended.py  test_responsive.py
utils/: __init__.py  graphics.py  helpers.py  resources.py  resources_extended.py  responsive.py
