[project]
name = "guess-number-pygame"
version = "0.1.0"
description = "A Pygame-based number guessing game with ECS architecture"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "logging>=0.4.9.6",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pygame>=2.6.1",
]
