[project]
name = "guess-number-pygame"
version = "0.1.0"
description = "A Pygame-based number guessing game with ECS architecture"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama>=0.4.4",
    "logging>=0.4.9.6",
    "pillow>=12.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pygame>=2.6.1",
    "pyinstaller>=6.17.0",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.1",
    "pytest-mock>=3.10.0",
    "pytest-cov>=5.0.0",
]
dev = [
    "pytest>=9.0.1",
    "pytest-mock>=3.10.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
]
